Use args correctly